--- a/vue/package.json
+++ b/vue/package.json
@@ -12,6 +12,7 @@
     "@headlessui/vue": "^1.7.15",
     "@heroicons/vue": "^2.0.18",
     "@tailwindcss/forms": "^0.5.4",
+    "axios": "^1.4.0",
     "vue": "^3.3.4",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
